--- a/Práctica 02/css/estilo02.css
+++ b/Práctica 02/css/estilo02.css
@@ -12,8 +12,179 @@
 #tabulae {font-weight: bold; font-size:11px;}
 
 
+.main_container {
+	width: 980px;
+	height:500px;
+	border: 2px solid red;
+		
+}
+
+.leftcolumn {
+	width: 600px;
+	height:300px;
+	border: 2px solid green;
+	float: left;
+	
+	
+	
+}
+.rightcolumn {
+	width: 330px;
+	height:300px;
+	border: 2px solid yellow;
+	float: right;
+	
+	
+}
+
+.box258brown_left {
+  float: left;
+  border: 1px solid blue;
+  height:100px;  
+  width: 258px;
+  margin: 5px 10px 10px 5px;	
+}
 
 
+
+.box258brown_right {
+  float: right;
+  border: 1px solid black;
+  height:100px;  
+  width: 258px;
+  margin: 5px 10px 10px 5px;	
+}
+
+.box258brown_fill {
+	float: left;
+ 	
+	width: 222px;	
+	background-image:url(../images/box_header_brown.jpg);
+	background-repeat:repeat-x;
+	height:35px;
+	border:1px;
+	color:#243356;
+}
+
+.box258brown_top_left {
+	width: 13px;	
+	float: left;
+ 	
+	background-image:url(../images/top_left_brown.png);
+	height:48px;
+	border:0px;
+	
+}
+
+.box258brown_top_right {
+	float: left;
+ 	
+	width: 13px;	
+	background-image:url(../images/top_right_brown.png);
+	height:48px;
+	border:0px;
+	
+}
+
+
+
+.box258brown_bottom_left {
+	width: 13px;	
+	float: left;
+ 	
+	background-image:url(../images/bottom_left_brown.png);
+	height:25px;
+	border:0px;
+	
+}
+
+.box258brown_bottom_right {
+	float: left;
+ 	
+	width: 13px;	
+	background-image:url(../images/bottom_right_brown.png);
+	height:25px;
+	border:0px;
+	
+}
+
+.box258brown_bottom_fill {
+	float: left;
+ 	
+	width: 222px;	
+	background-image:url(../images/bottom_brown.png);
+	background-repeat:repeat-x;
+	height:25px;
+	border:1px;
+	color:#243356;
+}
+
+
+.boxlist {
+  border: 2px solid #808080;
+  display: inline;
+  width: 254px;
+  margin: 0 10px 10px 0;
+	
+}
+
+
+.box258middle {
+  margin: 0px 0px 0px 0px;
+  border: 0px solid #808080;  
+  width: 252px;
+  margin: 0 10px 10px 0;
+  height: 58px;
+  
+  }
+  
+ .box258middle_left {
+ 	position:relative;
+ 	top: -3px;	
+	left: 0px;
+	float: left; 	
+	width: 6px;	
+	background-image:url(../images/border_left_brown.png);
+	height:20px;
+	border:0px;	
+} 
+
+ .box258middle_right	 {
+	position:relative;
+	top: -3px;	
+	left:238px;
+	float: left; 	
+	width: 6px;	
+	background-image:url(../images/border_right_brown.png);
+	height:20px;
+	border:0px;	
+} 
+  
+  
+.box258brown_header {
+  display: inline;
+  margin: 0px 0px 0px 0px;
+  border: 0px solid blue; 
+  width: 252px;
+  height:40px
+  margin: 0 10px 10px 0;
+	
+}
+
+.box258brown_header_title{
+	position:relative;
+	top: 26px;	
+	left:38px;
+}
+
+.box258brown_footer {
+  margin: 1px 1px 1px 1px;
+  border: 0px solid green; 
+  width: 252px;
+  height:40px
+  margin: 0 10px 10px 0;
+  	
+}
 
 
 
