--- a/Práctica 02/css/estilo02.css
+++ b/Práctica 02/css/estilo02.css
@@ -1,3 +1,52 @@
+#body_bg_img {	background:  url(../images/bg_image7.jpg) center 0px no-repeat;}
+
+#tabulae {font-weight: bold; font-size:11px;}
+
+#main_div {
+    display:block; 
+    width:100%; 
+    height:100%; 
+    margin:0; 
+    padding:0; 
+    _overflow-x:hidden;
+}
+
+#main_container {
+    position: relative;
+    width: 760px;
+    margin: 0 auto;
+    background: #fff;
+}
+    
+#top_menu_container {
+    position: relative;
+    width: 760px;
+    height: 105px;
+    z-index:100;
+    background: transparent url(../images/mainback.gif) top left no-repeat;
+}
+    
+#centercolumn {
+  position: relative;
+  left: 10px;
+  width: 740px;
+}
+
+#leftcolumn {
+  float: left;
+  display: inline;
+  width: 540px;
+}
+    
+#rightcolumn {
+  float: right;
+  display: inline;
+  width: 200px;
+}
+
+
+.mag_glass {background-image: url(../images/mag-glass.png); }
+
 .box_header_brown{
 	width:100px;	
 	background-image:url(images/box_header_brown.jpg);
@@ -7,9 +56,7 @@
 	color:#243356;	
 }
 
-#body_bg_img {	background:  url(../images/bg_image7.jpg) center 0px no-repeat;}
 
-#tabulae {font-weight: bold; font-size:11px;}
 
 .clearer {
     display:block;
@@ -17,13 +64,12 @@
     line-height:0px;
     font-size:0px;
     clear:both;
-    }
+}
 
 .main_container {
 	width: 980px;
 	height:500px;
 	border: 0px solid red;
-		
 }
 
 .leftcolumn {
@@ -97,8 +143,7 @@
 
 .box258brown_top_left {
 	width: 13px;	
-	float: left;
- 	
+	float: left; 	
 	background-image:url(../images/top_left_brown.png);
 	height:48px;
 	border:0px;
@@ -106,21 +151,18 @@
 }
 
 .box258brown_top_right {
-	float: left;
- 	
+	float: left; 	
 	width: 13px;	
 	background-image:url(../images/top_right_brown.png);
 	height:48px;
-	border:0px;
-	
+	border:0px;	
 }
 
 
 
 .box258brown_bottom_left {
 	width: 13px;	
-	float: left;
- 	
+	float: left; 	
 	background-image:url(../images/bottom_left_brown.png);
 	height:25px;
 	border:0px;
