--- a/Práctica 02/css/estilo02.css
+++ b/Práctica 02/css/estilo02.css
@@ -249,8 +249,8 @@
 
 .box200brown {
   float: right;
-  border: 0px solid black;
-  height:100px;  
+  border: 1px solid black;
+  height:120px;  
   width: 200px;
   margin: 5px 10px 10px 5px;	
 }
@@ -283,69 +283,6 @@
 	
 }
 
-
-
-.box200brown_bottom_left {
-	width: 13px;	
-	float: left; 	
-	background-image:url(../images/bottom_left_brown.png);
-	height:25px;
-	border:0px;
-	
-}
-
-.box200brown_bottom_right {
-	float: left; 	
-	width: 13px;	
-	background-image:url(../images/bottom_right_brown.png);
-	height:25px;
-	border:0px;
-	
-}
-
-.box200brown_bottom_fill {
-	float: left; 	
-	width: 164px;	
-	background-image:url(../images/bottom_brown.png);
-	background-repeat:repeat-x;
-	height:25px;
-	border:1px;
-	color:#243356;
-}
-
-
-
-.box200middle {
-  margin: 0px 0px 0px 0px;
-  border: 0px solid #808080;  
-  width: 194px;
-  margin: 0 10px 10px 0;
-  height: 80px;
-  
-  }
-  
- .box200middle_left {
- 	position:relative;
- 	top: 45px;	
-	left: -190px;
-	float: left; 	
-	width: 6px;	
-	background-image:url(../images/border_left_brown.png);
-	height:45px;
-	border:0px;	
-} 
-
- .box200middle_right	 {
-	position:relative;
-	top: 45px;	
-	left:-10px;
-	float: left; 	
-	width: 6px;	
-	background-image:url(../images/border_right_brown.png);
-	height:45px;
-	border:0px;	
-} 
-  
   
 .box200brown_header {
   display: inline;
@@ -363,14 +300,82 @@
 	left:38px;
 }
 
+
+.box200brown_middle {
+  margin: 0px 0px 0px 0px;
+  border: 0px solid #808080;  
+  width: 188px;
+   height: 80px;
+  
+  }
+  
+
+ .box200brown_middle_left {
+ 	position:relative;
+ 	top: 0px;	
+	left: 0px;
+	float: left; 	
+	width: 6px;	
+	background-image:url(../images/border_left_brown.png);
+	height:45px;
+	border:0px;	
+} 
+
+ .box200brown_middle_right	 {
+	position:relative;
+	top: 0px;	
+	left: 180px;
+	float: left; 	
+	width: 6px;	
+	background-image:url(../images/border_right_brown.png);
+	height:45px;
+	border:0px;	
+} 
+  
+
 .box200brown_footer {
-  margin: 1px 1px 1px 1px;
+  margin: 0px 0px 0px 0px;
   border: 0px solid green; 
-  width: 194px;
+  width: 192px;
   height:40px
-  margin: 0 10px 10px 0;
-  	
+    	
 }
+
+.box200brown_bottom_left {
+	position:relative;
+	top: 0px;	
+	left:-11px;
+	width: 13px;	
+	float: left; 	
+	background-image:url(../images/bottom_left_brown.png);
+	height:25px;
+	border:0px;
+	
+}
+.box200brown_bottom_fill {
+	position:relative;
+	left:-11px;
+	float: left; 	
+	width: 164px;	
+	background-image:url(../images/bottom_brown.png);
+	background-repeat:repeat-x;
+	height:25px;
+	border:0px;
+	color:#243356;
+}
+
+.box200brown_bottom_right {
+	position:relative;
+	left:178px;
+	top: -25px;
+	float: left; 	
+	width: 13px;	
+	background-image:url(../images/bottom_right_brown.png);
+	height:25px;
+	border:0px;
+	
+}
+
 
 
 
