--- a/Práctica 02/css/estilo02.css
+++ b/Práctica 02/css/estilo02.css
@@ -249,8 +249,8 @@
 
 .box200brown {
   float: right;
-  border: 0px solid black;
-  height:150px;  
+  border: 1px solid red;
+  height:230px;  
   width: 200px;
   margin: 1px 10px 10px 5px;	
 }
@@ -305,7 +305,7 @@
   margin: 0px 0px 0px 0px;
   border: 0px solid #808080;  
   width: 188px;
-  height: 95px;
+  height: 189px;
   
   }
   
